# rust_weather_telegram_bot

./: Cargo.toml  test.db
src/: constants.rs  main.rs  models.rs  utils.rs
