[package]
name = "rust_weather_telegram_bot"
version = "0.1.0"
authors = ["droppenheimer27@gmail.com"]
edition = "2018"

[dependencies]
tokio-core = "0.1"
futures = "0.1"
telegram-bot = "0.6"
reqwest = "0.9.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.88"

[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled"]
